added some nice box shadows to my cards

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             dignissimos libero hic natus, temporibus maxime odio quis voluptatem?</p>
         </div>
       </div>
-      <div class="col-10 col-md-4 order-1 order-md-2 card shadow move-down mt-3">
+      <div class="col-10 col-md-4 order-1 order-md-2 card icon-card-shadow move-down mt-3">
         <div class="p-1">
           <p class="mb-1 fw-bold"> <i class="mdi mdi-dog text-primary"></i> lorem ipsum dolor sit </p>
           <p class="mb-1 fw-bold"> <i class="mdi mdi-dog-side green"></i> lorem ipsum dolor sit </p>
@@ -103,14 +103,14 @@
     </section>
     <!-- SECTION 3 cards with a big one in the middle  -->
     <section class="row justify-content-evenly bg-grey align-items-center">
-      <div class="col-10 col-md-3 order-3 order-md-1 card text-center my-3">
+      <div class="col-10 col-md-3 order-3 order-md-1 card text-center my-3 card-shadow">
 
         <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ducimus repellendus accusamus. Omnis culpa
         </p>
         <p class="green px-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
-      <div class="col-11 col-md-3 order-1 order-md-2 card text-center my-3">
+      <div class="col-11 col-md-3 order-1 order-md-2 card text-center my-3 card-shadow">
         <h1><i class="mdi mdi-star-circle green"></i><i class="mdi mdi-star-circle green"></i><i
             class="mdi mdi-star-circle green"></i></h1>
         <h2>Lorem ipsum dolor sit amet.</h2>
@@ -118,7 +118,7 @@
         </p>
         <p class="green px-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
-      <div class="col-10 col-md-3 order-2 order-md-3 card text-center my-3">
+      <div class="col-10 col-md-3 order-2 order-md-3 card text-center my-3 card-shadow">
         <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ducimus repellendus accusamus. Omnis culpa
         </p>
